deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-playground-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-playground
  template:
    metadata:
      labels:
        app: iot-playground
    spec:
      containers:
      - name: iot-playground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
