service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-playground-service
spec:
  ports:
  - port: 8888
  selector:
    app: iot-playground
